--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR" class="scroll-pt-20">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,17 +8,9 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background-color: #111827;
-      color: #f9fafb;
-    }
-  </style>
+  <style>body{font-family:'Inter',sans-serif;background-color:#111827;color:#f9fafb;}</style>
 </head>
-
 <body class="bg-gray-900 text-white">
-
   <header class="fixed top-0 left-0 right-0 bg-gray-800 shadow-md z-50 h-16 flex items-center px-4">
     <div class="max-w-6xl mx-auto w-full flex justify-between items-center">
       <h2 class="text-xl font-bold text-white mr-6">Jonas Augusto</h2>
@@ -33,9 +24,7 @@
       </ul>
       <div class="md:hidden">
         <button id="mobile-menu-button" class="text-gray-200 focus:outline-none">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/></svg>
         </button>
       </div>
     </div>
@@ -51,23 +40,13 @@
     </div>
   </header>
 
-  <section id="hero"
-    class="min-h-screen flex items-center justify-center bg-gradient-to-b from-gray-900 to-black text-white text-center pt-16">
+  <section id="hero" class="min-h-screen flex items-center justify-center bg-gradient-to-b from-gray-900 to-black text-white text-center pt-16">
     <div class="max-w-3xl px-4">
-      <h1 class="text-4xl md:text-6xl font-bold mb-4">
-        Desenvolvedor <span id="typed" class="text-blue-400"></span>
-      </h1>
-      <p class="text-lg md:text-xl mb-8 text-gray-200">
-        Back-End Dev | C# .NET | Python | IA Generativa | Automação de Processos
-      </p>
+      <h1 class="text-4xl md:text-6xl font-bold mb-4">Desenvolvedor <span id="typed" class="text-blue-400"></span></h1>
+      <p class="text-lg md:text-xl mb-8 text-gray-200">Back-End Dev | C# .NET | Python | IA Generativa | Automação de Processos</p>
       <div class="flex flex-col sm:flex-row gap-4 justify-center">
-        <a href="#contato" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition text-center">
-          Fale comigo
-        </a>
-        <a href="jonasaugusto_cv.pdf" download
-          class="bg-gray-700 hover:bg-gray-600 text-white font-bold py-3 px-6 rounded-lg transition text-center">
-          Baixar Currículo
-        </a>
+        <a href="#contato" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition text-center">Fale comigo</a>
+        <a href="jonasaugusto_cv.pdf" download class="bg-gray-700 hover:bg-gray-600 text-white font-bold py-3 px-6 rounded-lg transition text-center">Baixar Currículo</a>
       </div>
     </div>
   </section>
@@ -75,15 +54,8 @@
   <section id="sobre" class="py-20 bg-gray-800" data-aos="fade-up">
     <div class="max-w-4xl mx-auto px-4">
       <h2 class="text-3xl font-bold text-center mb-8 text-white">Sobre Mim</h2>
-      <p class="text-lg text-gray-200">
-        Desenvolvedor Back-End Júnior com 87% de eficiência comprovada em automação de processos e implementação de
-        soluções de IA generativa. Formando em Engenharia de Software com média 9.3/10 e experiência prática em produção
-        com autonomia total.
-      </p>
-      <p class="mt-4 text-lg text-gray-200">
-        Busco posicionar-me como Dev Back-End e especialista em IA aplicada a negócios, com certificações cloud em
-        progresso (AWS/Azure).
-      </p>
+      <p class="text-lg text-gray-200">Desenvolvedor Back-End Júnior com 87% de eficiência comprovada em automação de processos e implementação de soluções de IA generativa. Formando em Engenharia de Software com média 9.3/10 e experiência prática em produção com autonomia total.</p>
+      <p class="mt-4 text-lg text-gray-200">Busco posicionar-me como Dev Back-End e especialista em IA aplicada a negócios, com certificações cloud em progresso (AWS/Azure).</p>
     </div>
   </section>
 
@@ -92,31 +64,21 @@
       <h2 class="text-3xl font-bold text-center mb-10 text-white">Experiência Profissional</h2>
       <div class="space-y-8">
         <div class="p-6 bg-gray-700 rounded-lg shadow text-gray-100">
-          <h3 class="text-xl font-bold text-blue-300">Estagiário Desenvolvedor de Automação de Processos e Analista de
-            Suporte RPA</h3>
+          <h3 class="text-xl font-bold text-blue-300">Estagiário Desenvolvedor de Automação de Processos e Analista de Suporte RPA</h3>
           <p class="text-gray-400">Neurodev | Set - Nov 2025</p>
           <ul class="mt-3 list-disc pl-5 space-y-1 text-gray-200">
-            <li>Desenvolvi e mantive 15+ fluxos de automação críticos com N8N, conectando 4 sistemas diferentes via
-              Webhooks e APIs REST, <strong>reduzindo tempo de processamento em 40%</strong> e <strong>eliminando 25
-                horas/mês de trabalho manual</strong>.</li>
-            <li><strong>Prompt Engineering Avançado</strong>: Otimizei prompts e workflows de IA que <strong>reduziram
-                tempo médio de resposta em 45%</strong> (de 2h para 1.1h).</li>
-            <li><strong>Sustentação de Automação Crítica</strong>: Responsável único pela manutenção de solução RPA em
-              Python que processa <strong>800+ transações diárias</strong>, implementando monitoramento proativo que
-              <strong>reduziu downtime em 93,5%</strong> (de 35h/mês para 2.25h/mês).
-            </li>
-            <li><strong>DevOps & Troubleshooting</strong>: Gerenciei ambiente de produção com Docker, PostgreSQL e Linux
-              CLI.</li>
+            <li>Desenvolvi e mantive 15+ fluxos de automação críticos com N8N, conectando 4 sistemas diferentes via Webhooks e APIs REST, <strong>reduzindo tempo de processamento em 40%</strong> e <strong>eliminando 25 horas/mês de trabalho manual</strong>.</li>
+            <li><strong>Prompt Engineering Avançado</strong>: Otimizei prompts e workflows de IA que <strong>reduziram tempo médio de resposta em 45%</strong> (de 2h para 1.1h).</li>
+            <li><strong>Sustentação de Automação Crítica</strong>: Responsável único pela manutenção de solução RPA em Python que processa <strong>800+ transações diárias</strong>, implementando monitoramento proativo que <strong>reduziu downtime em 93,5%</strong> (de 35h/mês para 2.25h/mês).</li>
+            <li><strong>DevOps & Troubleshooting</strong>: Gerenciei ambiente de produção com Docker, PostgreSQL e Linux CLI.</li>
           </ul>
         </div>
         <div class="p-6 bg-gray-700 rounded-lg shadow text-gray-100">
           <h3 class="text-xl font-bold text-blue-300">Desenvolvedor Júnior de Automação de Processos com IA</h3>
           <p class="text-gray-400">Bnect | Ago - Set 2025</p>
           <ul class="mt-3 list-disc pl-5 space-y-1 text-gray-200">
-            <li>Desenvolvi e implementei agentes inteligentes para atendimento multicanal (WhatsApp e Instagram) de
-              forma totalmente autônoma, utilizando IA generativa para otimizar a interação com o usuário.</li>
-            <li>Automatizei processos internos, geração de conteúdo e execução de ações backend integradas a sistemas
-              externos (CRM, Bling, Jetcommerce, Google Calendar).</li>
+            <li>Desenvolvi e implementei agentes inteligentes para atendimento multicanal (WhatsApp e Instagram) de forma totalmente autônoma, utilizando IA generativa para otimizar a interação com o usuário.</li>
+            <li>Automatizei processos internos, geração de conteúdo e execução de ações backend integradas a sistemas externos (CRM, Bling, Jetcommerce, Google Calendar).</li>
           </ul>
         </div>
       </div>
@@ -135,8 +97,7 @@
             <span class="bg-gray-600 px-2 py-1 rounded text-xs">Discord.py</span>
             <span class="bg-gray-600 px-2 py-1 rounded text-xs">SQLite</span>
           </div>
-          <a href="https://github.com/JonasaAugusto/DiscordChatBot_Zombot" target="_blank"
-            class="text-blue-400 hover:underline mt-2 inline-block">Ver no GitHub</a>
+          <a href="https://github.com/JonasaAugusto/DiscordChatBot_Zombot" target="_blank" class="text-blue-400 hover:underline mt-2 inline-block">Ver no GitHub</a>
         </div>
         <div class="bg-gray-700 p-6 rounded-lg shadow text-gray-100">
           <h3 class="text-xl font-bold text-blue-300">Gerador de QR Code Avançado</h3>
@@ -146,8 +107,7 @@
             <span class="bg-gray-600 px-2 py-1 rounded text-xs">Tkinter</span>
             <span class="bg-gray-600 px-2 py-1 rounded text-xs">qrcode</span>
           </div>
-          <a href="https://github.com/JonasaAugusto/qrcode-generator" target="_blank"
-            class="text-blue-400 hover:underline mt-2 inline-block">Ver no GitHub</a>
+          <a href="https://github.com/JonasaAugusto/qrcode-generator" target="_blank" class="text-blue-400 hover:underline mt-2 inline-block">Ver no GitHub</a>
         </div>
         <div class="bg-gray-700 p-6 rounded-lg shadow text-gray-100">
           <h3 class="text-xl font-bold text-blue-300">Bot de Interação em Mídia Social (RPA)</h3>
@@ -157,8 +117,7 @@
             <span class="bg-gray-600 px-2 py-1 rounded text-xs">PyAutoGUI</span>
             <span class="bg-gray-600 px-2 py-1 rounded text-xs">RPA</span>
           </div>
-          <a href="https://github.com/JonasaAugusto/instagram-comments" target="_blank"
-            class="text-blue-400 hover:underline mt-2 inline-block">Ver no GitHub</a>
+          <a href="https://github.com/JonasaAugusto/instagram-comments" target="_blank" class="text-blue-400 hover:underline mt-2 inline-block">Ver no GitHub</a>
         </div>
       </div>
     </div>
@@ -220,15 +179,11 @@
     <div class="max-w-4xl mx-auto px-4">
       <h2 class="text-3xl font-bold text-center mb-8">Contato</h2>
       <p class="text-center mb-6 text-gray-200">Preencha o formulário abaixo ou me encontre nas redes:</p>
-      <form id="contact-form" action="https://submit-form.com/1pIuu489V" method="POST" class="space-y-4">
-        <input type="text" name="name" placeholder="Nome" required
-          class="w-full p-3 rounded bg-gray-700 text-white" />
-        <input type="email" name="email" placeholder="E-mail" required
-          class="w-full p-3 rounded bg-gray-700 text-white" />
-        <textarea name="message" placeholder="Mensagem" required
-          class="w-full p-3 rounded bg-gray-700 text-white h-32"></textarea>
-        <button type="submit" id="submit-btn"
-          class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition flex items-center justify-center">
+      <form id="contact-form" action="https://submit-form.com/1pIuu489V" method="POST" target="_blank" class="space-y-4">
+        <input type="text" name="name" placeholder="Nome" required class="w-full p-3 rounded bg-gray-700 text-white" />
+        <input type="email" name="email" placeholder="E-mail" required class="w-full p-3 rounded bg-gray-700 text-white" />
+        <textarea name="message" placeholder="Mensagem" required class="w-full p-3 rounded bg-gray-700 text-white h-32"></textarea>
+        <button type="submit" id="submit-btn" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition flex items-center justify-center">
           <svg class="hidden animate-spin -ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
             <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
             <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V6a6 6 0 616 6h2a6 6 0 016 6v2a6 6 0 01-6 6H6a6 6 0 01-6-6v-2z"></path>
@@ -252,12 +207,8 @@
     <div class="bg-gray-800 rounded-lg p-6 max-w-md w-full mx-4 text-center shadow-2xl">
       <div class="text-4xl mb-4">✅</div>
       <h3 class="text-xl font-bold text-blue-400 mb-2">Mensagem enviada!</h3>
-      <p class="text-gray-200 mb-4">
-        Obrigado pelo contato. Responderei em breve!
-      </p>
-      <button id="close-modal" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition">
-        Fechar
-      </button>
+      <p class="text-gray-200 mb-4">Obrigado pelo contato. Responderei em breve!</p>
+      <button id="close-modal" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition">Fechar</button>
     </div>
   </div>
 
@@ -266,34 +217,28 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"></script>
-
   <script>
     document.addEventListener("DOMContentLoaded", function () {
       AOS.init();
       gsap.registerPlugin(ScrollTrigger);
-
       gsap.from("header", { y: -100, opacity: 0, duration: 1, ease: "power2.out" });
       gsap.from("#hero", { opacity: 0, duration: 1.5, ease: "power2.out" });
-
       new Typed('#typed', {
         strings: ["Python", "C#", "Back-End", "IA", "Process Automation"],
         typeSpeed: 60,
         backSpeed: 30,
         loop: true
       });
-
       const menuButton = document.getElementById('mobile-menu-button');
       const menu = document.getElementById('mobile-menu');
       if (menuButton && menu) {
         menuButton.addEventListener('click', () => menu.classList.toggle('hidden'));
       }
-
       const contactForm = document.getElementById('contact-form');
       const submitBtn = document.getElementById('submit-btn');
       const spinner = submitBtn.querySelector('svg');
       const modal = document.getElementById('success-modal');
       const closeModalBtn = document.getElementById('close-modal');
-
       if (contactForm && submitBtn && spinner && modal && closeModalBtn) {
         contactForm.addEventListener('submit', (e) => {
           submitBtn.disabled = true;
@@ -305,7 +250,6 @@
             </svg>
             Enviando...
           `;
-
           setTimeout(() => {
             submitBtn.disabled = false;
             submitBtn.innerHTML = `
@@ -316,7 +260,6 @@
               Enviar Mensagem
             `;
           }, 2000);
-
           setTimeout(() => {
             modal.classList.remove('hidden');
             const content = modal.querySelector('.bg-gray-800');
@@ -324,18 +267,10 @@
               gsap.set(content, { scale: 0.9, opacity: 0 });
               gsap.to(content, { scale: 1, opacity: 1, duration: 0.3, ease: "power2.out" });
             }
-
             contactForm.reset();
           }, 500);
-
-          setTimeout(() => {
-            if (window.history.replaceState) {
-              window.history.replaceState(null, null, window.location.href);
-            }
-          }, 100);
         });
       }
-
       if (closeModalBtn && modal) {
         closeModalBtn.addEventListener('click', () => {
           const content = modal.querySelector('.bg-gray-800');
@@ -349,7 +284,6 @@
             });
           }
         });
-
         modal.addEventListener('click', (e) => {
           if (e.target === modal) closeModalBtn.click();
         });
@@ -357,5 +291,4 @@
     });
   </script>
 </body>
-
 </html>
